src/styles/global.css
/*@import url("https://fonts.googleapis.com/css2?family=Lora:ital,wght@0,400;0,500;0,600;0,700;1,400;1,500;1,600;1,700&display=swap");*/
/*@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');*/
@import url("https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap");

@import url("https://fonts.googleapis.com/css2?family=Noto+Sans+JP:wght@300;400;700&family=Noto+Serif+JP:wght@300;400;700&display=swap");

/* @font-face {
  font-family: "Computer Modern";
  src: url("../fonts/ComputerModern/woff/cmunrm-webfont.woff2") format("woff2"),
    url("../fonts/ComputerModern/woff/cmunrm-webfont.woff") format("woff"),
    url("../fonts/ComputerModern/otf/cmunrm.otf") format("opentype");
  font-weight: normal;
  font-style: normal;
}

@font-face {
  font-family: "Computer Modern";
  src: url("../fonts/ComputerModern/woff/cmunbx-webfont.woff2") format("woff2"),
    url("../fonts/ComputerModern/woff/cmunbx-webfont.woff") format("woff"),
    url("../fonts/ComputerModern/otf/cmunbx.otf") format("opentype");
  font-weight: bold;
  font-style: normal;
}

@font-face {
  font-family: "Computer Modern";
  src: url("../fonts/ComputerModern/woff/cmunti-webfont.woff2") format("woff2"),
    url("../fonts/ComputerModern/woff/cmunti-webfont.woff") format("woff"),
    url("../fonts/ComputerModern/otf/cmunti.otf") format("opentype");
  font-weight: normal;
  font-style: italic;
}

@font-face {
  font-family: "Computer Modern";
  src: url("../fonts/ComputerModern/woff/cmunbi-webfont.woff2") format("woff2"),
    url("../fonts/ComputerModern/woff/cmunbi-webfont.woff") format("woff"),
    url("../fonts/ComputerModern/otf/cmunbi.otf") format("opentype");
  font-weight: bold;
  font-style: italic;
} */

html {
  scroll-behavior: smooth;
}

body {
  padding: 0;
  margin: 0;
  /* Transition the darkmode toggle */
  transition: all 0.25s ease-in-out;
}

.katex {
  font-size: 1.2em;
}

/* #root {
  position: relative;
  min-height: 100vh;
}

#content {
  padding: 2vh 0 calc(2vh + 30px);
} */

/* Hide header links when gatsby markdown contents are hidden */
@media (max-width: 1375px) {
  .header-link-class {
    display: none !important;
  }
}

